devfun_ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: devfun-prod
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: devfunapi-prod-tls
    hosts:
    - api.devfun.prod.demo.4tecture.ch
  - secretName: devfunweb-prod-tls
    hosts:
    - www.devfun.prod.demo.4tecture.ch
  rules:
  - host: api.devfun.prod.demo.4tecture.ch
    http:
      paths:
      - backend:
          serviceName: devfunapisvc-prod
          servicePort: 80
  - host: www.devfun.prod.demo.4tecture.ch
    http:
      paths:
      - backend:
          serviceName: devfunwebsvc-prod
          servicePort: 80
