devfun_ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: devfun-test
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: devfunapi-test-tls
    hosts:
    - api.devfun.test.demo.4tecture.ch
  - secretName: devfunweb-test-tls
    hosts:
    - www.devfun.test.demo.4tecture.ch
  rules:
  - host: api.devfun.test.demo.4tecture.ch
    http:
      paths:
      - backend:
          serviceName: devfunapisvc-test
          servicePort: 80
  - host: www.devfun.test.demo.4tecture.ch
    http:
      paths:
      - backend:
          serviceName: devfunwebsvc-test
          servicePort: 80
